<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">智能移动POS</string>
    <string name="title">标题</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="dialog_title">提示</string>
    <string name="message_error">接口请求异常</string>
    <string name="loading">正在加载中..</string>
    <string name="login_title">OSystem Login</string>
    <string name="login_text">登录</string>
    <string name="txt_print">打印</string>
    <string name="menu_switch_store">主题/门店切换</string>
    <string name="menu_signout">退出</string>
    <string name="item_home">首页</string>
    <string name="item_kucun">库存</string>
    <string name="item_tongji">统计</string>
    <string name="item_xiaoshou">销售</string>
    <string name="item_jichu">基础</string>
    <string name="item_enter">录入</string>
    <string name="item_evaluate">评价</string>
    <string name="item_relevance">关联款</string>
    <string name="item_photo">图片</string>
    <string name="search">搜索</string>
    <string name="modify_ip">修改服务器地址</string>
    <string name="server_address">新服务器地址</string>
    <string name="input_server_address">请输入服务器地址</string>
    <string name="hint_no_network">没有网络，请检查网络！</string>
    <string name="system_menu">系统主菜单</string>
    <string name="menu_goods_manager">商品管理</string>
    <string name="menu_caigoudan">采购单</string>
    <string name="menu_xiaoshoudan">销售单</string>
    <string name="menu_kucunchaxun">库存查询</string>
    <string name="menu_shanpingchaxun">商品查询</string>
    <string name="menu_kuaishushoukuang">快速收款</string>
    <string name="menu_kehu_manager">客户管理</string>
    <string name="menu_diaobo_manage">调拨管理</string>
    <string name="menu_pandian_manage">盘点管理</string>
    <string name="menu_offline_manage">离线管理</string>
    <string name="menu_zhigong_shouhuo">直供收货</string>
    <string name="menu_gongyingsang_tuihuo">供应商退货</string>
    <string name="menu_pifa_xiaoshou">批发销售</string>
    <string name="menu_peisong_manager">配送管理</string>
    <string name="menu_yaohuo_order">要货单</string>
    <string name="menu_member_manager">会员</string>
    <string name="menu_qudan">销售取单</string>
    <string name="menu_jichi_manage">会员计次</string>
    <string name="item_title_xiaoshoudan">销售单</string>
    <string name="item_title_xiaoshoutuihuodan">销售退货单</string>
    <string name="item_message_maihuo">卖货、出库</string>
    <string name="item_message_tuihuo">退货、换货</string>
    <string name="item_title_lingshou">门店收款</string>
    <string name="item_message_lingshou">零售</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="regist">注册</string>
    <string name="params_hint_password">请输入密码</string>
    <string name="params_hint_user">请输入用户名</string>
    <string name="params_current_version">当前版本:</string>
    <string name="params_setting">系统设置</string>
    <string name="btnSave">保存</string>
    <string name="btnTest">测试</string>
    <string name="scanning">扫描设备…</string>
    <string name="select_device">选择连接的设备</string>
    <string name="select_and_connect_device">搜索并连接蓝牙打印机</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">匹配的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="not_connected">请先连接蓝牙打印机</string>
    <string name="strLang">cn</string>
    <string name="help">帮助</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="close">关闭</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="billing">开单</string>
    <string name="modify">修改</string>
    <string name="modifycount">改数</string>
    <string name="modifyprice">改价</string>
    <string name="zhekou">整单折扣</string>
    <string name="zhekou_danbi">折扣</string>
    <string name="fukuan_vip">整单会员卡支付</string>
    <string name="modifytotal">整单改价</string>
    <string name="shenhe">审核</string>
    <string name="deleteOrder">删单</string>
    <string name="moling">抹零</string>
    <string name="zhengdanzhekou">整单折扣</string>
    <string name="zhengdanyijia">整单议价</string>
    <string name="zhengdanquxiao">整单取消</string>
    <string name="yingyeyuan">营业员</string>
    <string name="list_item_ProdStore">所在库位</string>
    <string name="list_item_ProdCode">商品编码</string>
    <string name="list_item_ZiCode">自编码</string>
    <string name="list_item_Searchstr">查询关键词、编码、助词码、附加码</string>
    <string name="list_item_ProdName">商品名称</string>
    <string name="list_item_BarCode">商品条码</string>
    <string name="list_item_subNo">自编码</string>
    <string name="list_item_ProdStock">商品库存</string>
    <string name="list_item_Spec">规格</string>
    <string name="list_item_Unit">单位</string>
    <string name="list_item_DepName">部门名称</string>
    <string name="list_item_DepCode">部门编码</string>
    <string name="list_item_PUnitAmt">细数</string>
    <string name="list_item_CountN">验收数量</string>
    <string name="list_item_CountN4">盘点数量</string>
    <string name="list_item_CountN1">配送数量</string>
    <string name="list_item_CountN2">实际数量</string>
    <string name="list_item_CountN3">实收数量</string>
    <string name="list_item_CountN5">数量</string>
    <string name="list_item_need_Qty">需求数量</string>
    <string name="list_item_order_Qty">订单数量</string>
    <string name="list_item_giveAway_Number">赠送数量</string>
    <string name="list_item_CountN6">验收数</string>
    <string name="list_item_Price">价格</string>
    <string name="list_item_salePrice">售价</string>
    <string name="list_item_beforPrice">原价</string>
    <string name="list_item_VipPrice">VIP价</string>
    <string name="list_item_quantity">要货数量</string>
    <string name="list_item_Amount">金额</string>
    <string name="list_item_XSDate">销售日期</string>
    <string name="list_item_YKType">盈亏类型</string>
    <string name="list_item_PRNTYPE">格式</string>
    <string name="list_item_TYPE">类型</string>
    <string name="list_item_ScanNum">扫描次数</string>
    <string name="list_item_DiffCount">差异数</string>
    <string name="list_item_DiffReason">差异原因</string>
    <string name="list_item_returnCount">退货数量</string>
    <string name="list_item_returnReason">退货原因</string>
    <string name="list_item_WeiYanShouShuLiang">未验收数量</string>
    <string name="list_item_YanShouShuLiang">验收数量</string>
    <string name="list_wei_yan_shu">未验数</string>
    <string name="list_item_piFaCount">批发数量</string>
    <string name="list_item_HTCode">合同编码</string>
    <string name="list_item_PSHTCode">配送合同</string>
    <string name="list_item_SupCode">供应商编码</string>
    <string name="list_item_Customer_Name">客户名称</string>
    <string name="list_item_Customer_id">客户编码</string>
    <string name="list_item_Customer_zjm">助记码</string>
    <string name="list_item_Contact">联系人</string>
    <string name="list_item_Tel">电话</string>
    <string name="list_item_FormIndex">单据号</string>
    <string name="list_item_PDNO">盘点任务号</string>
    <string name="list_item_Status">单据状态</string>
    <string name="list_item_BillType">单据类型</string>
    <string name="list_item_OrderDate">单据日期</string>
    <string name="list_item_PDTypeName">盘点类型</string>
    <string name="list_item_SupName">供应商名称</string>
    <string name="list_item_StoreName">仓库名称</string>
    <string name="list_item_StoreCode">仓库编码</string>
    <string name="list_item_AllAmount">总金额</string>
    <string name="list_item_AllCount">总数量</string>
    <string name="list_item_CustName">客户名称</string>
    <string name="list_item_OutOrg">调出组织</string>
    <string name="list_item_OutWareHouse">调出仓库</string>
    <string name="list_item_InWareHouse">调入仓库</string>
    <string name="list_item_InOrg">调入组织</string>
    <string name="list_item_OrgCode">组织编号</string>
    <string name="list_item_OrgName">组织名称</string>
    <string name="list_item_PSOrgCode">配送组织</string>
    <string name="list_item_InOrgCode">接收组织</string>
    <string name="list_item_HTCOde">合同编码</string>
    <string name="list_item_PFCustName">批发客户</string>
    <string name="list_item_ISKFP">是否开发票</string>
    <string name="list_item_JSType">结算方式</string>
    <string name="list_item_CGRWCode">采购任务号</string>
    <string name="list_item_YSZhuZhi">验收组织</string>
    <string name="list_item_DHRiQi">到货日期</string>
    <string name="list_item_HTNAME">合同名称</string>
    <string name="list_item_CGYCode">采购员编号</string>
    <string name="list_item_PeiSongDanHao">配送单号</string>
    <string name="list_item_XuHao">序号</string>
    <string name="list_item_SupplierCode">供应商编码</string>
    <string name="list_item_ProductDate">生产日期</string>
    <string name="list_item_ProdType">商品类型</string>
    <string name="list_item_ValidDate">交货日期</string>
    <string name="list_item_Pici_Name">批次号</string>
    <string name="list_item_PandianPihao">盘点批号</string>
    <string name="list_item_Type">类别</string>
    <string name="list_item_Fanwei">范围</string>
    <string name="list_item_Cangku">仓库</string>
    <string name="list_item_Beizhu">备注</string>
    <string name="list_item_apply">申请</string>
    <string name="list_item_XSPrice">销售价格</string>
    <string name="list_item_StoreNum">库存数量</string>
    <string name="list_item_Pihao">批号</string>
    <string name="list_item_Shopinfo">门店信息</string>
    <string name="list_item_ShopName">门店名称</string>
    <string name="list_item_ShopCode">门店编码</string>
    <string name="list_item_OrganizationName">机构名称</string>
    <string name="list_item_OrganizationCode">机构编码</string>
    <string name="list_item_BeginDate">起始时间</string>
    <string name="list_item_EndDate">结束时间</string>
    <string name="list_item_AllGoodsCount">总商品数量</string>
    <string name="list_item_Oper_Name">操作员</string>
    <string name="yuan">元</string>
    <string name="orderNo">单据号:</string>
    <string name="validDate">交货日期:</string>
    <string name="customerName">客户名称:</string>
    <string name="allGoodsQty">总数量:</string>
    <string name="allMoney">总金额:</string>
    <string name="orderStatus">单据状态:</string>
    <string name="storeName">门店名称:</string>
    <string name="supplierName">供应商名称:</string>
    <string name="pull_to_refreshing">下拉刷新</string>
    <string name="last_update">最后更新</string>
    <string name="release_refresh">松开立即刷新</string>
    <string name="cancel_refresh">下拉可以刷新</string>
    <string name="list_loading">正在刷新数据中 &#8230;</string>
    <string name="last_updata">上次更新： </string>
    <string name="bt_go_sell">去结算</string>
    <string name="bt_sell">结算</string>
    <string name="bt_sell_infor">确认结算</string>
    <string name="ok">确定</string>
    <string name="continue_save">继续保存</string>
    <string name="message_sell_ok">结算完成</string>
    <string name="message_sell_error">结算失败</string>
    <string name="item_name">名称:</string>
    <string name="item_subno">自编码:</string>
    <string name="item_no">商品编码:</string>
    <string name="item_rem">助记码:</string>
    <string name="mess_back">确定退出？</string>
    <string name="change_msg_back">有数据变动,确定保存？</string>
    <string name="pay_cancle">整单取消？</string>
    <string name="pay_tips">请扫描或输入用户出示的付款码</string>
    <string name="toast_2">服务已断开!</string>
    <string name="jiezhuang">结转</string>
    <string name="jiezhuang_ok">结转成功</string>
    <string name="save_member">保存会员号码</string>
    <string name="guadan" tools:ignore="ExtraTranslation">挂单</string>
    <string name="guadan_ok">挂单成功</string>
    <string name="recharge_success">充值成功</string>
    <string name="is_need_print">是否需要打印小票</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="select_goods_title">已选兑换商品</string>
    <string name="select_goods">选好了</string>
    <string name="no_select_goods">没选好</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
</resources>