<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/item_gray_line"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <GridView
            android:id="@+id/gv_bill_main"
            android:layout_weight="2"
            android:layout_width="fill_parent"
            android:numColumns="2"
            android:layout_height="0dp"/>

        <ListView
            android:layout_weight="4"
            android:layout_marginTop="10dp"
            android:id="@+id/listview_data"
            android:layout_width="match_parent"
            android:listSelector="#00000000"
            android:divider="@null"
            android:layout_height="0dp"
            />
    </LinearLayout>


    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ly_buttom1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/button_background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yijia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Button_blue"
                android:layout_weight="1"
                android:text="@string/modifytotal" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <Button
                android:id="@+id/btn_zhekou"
                style="@style/Button_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zhekou" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/button_background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_get_bill"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Button_blue"
                android:layout_weight="1"
                android:text="@string/menu_qudan" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <Button
                android:id="@+id/btn_delete"
                style="@style/Button_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
