<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_heigth40"
        android:layout_marginLeft="@dimen/activity_list_bottom"
        android:layout_marginRight="@dimen/activity_list_bottom"
        android:layout_marginBottom="@dimen/activity_list_bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/button_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bottom_btn_create"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button_blue"
            android:layout_weight="1"
            android:text="@string/billing" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <Button
            android:id="@+id/bottom_btn_modify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button_blue"
            android:layout_weight="1"
            android:text="@string/modify" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <Button
            android:id="@+id/bottom_btn_delete_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button_blue"
            android:layout_weight="1"
            android:text="@string/deleteOrder" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <Button
            android:id="@+id/bottom_btn_check"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button_blue"
            android:layout_weight="1"
            android:text="@string/shenhe" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_txt"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/activity_list_bottom"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:layout_above="@+id/ll_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_CurrentPosition"
            style="@style/TextView_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="当前选择是第0条单据"
            />

        <TextView
            android:id="@+id/tv_AllCount"
            style="@style/TextView_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="总共有0条单据"
            />

    </LinearLayout>

    <com.eshop.jinxiaocun.widget.RefreshListView
        android:id="@+id/rfListview"
        android:layout_width="match_parent"
        android:divider="@color/divider"
        android:layout_weight="1"
        android:layout_above="@+id/ll_bottom_txt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:dividerHeight="1dip"
        android:listSelector="#00000000"
        android:layout_height="match_parent"
        />

</RelativeLayout>
