<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:padding="20dp">


<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:padding="20dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/txt_size22"
            android:textColor="@color/black"
            android:paddingRight="10dp"
            android:gravity="center"
            android:text="应收金额" />

        <TextView
            android:id="@+id/et_price"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionSend"
            style="@style/EditText_Grey_Border"
            android:textSize="@dimen/txt_size22"
            android:text="￥50"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/txt_size16"
            android:textColor="@color/black"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:text="支付方式" />
        <Spinner
            android:id="@+id/sp_payway"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/btn_ok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Button_blue"
        android:text="@string/ok" />
</LinearLayout>

<LinearLayout
android:background="@color/white"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_gravity="bottom"
android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/button_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button_blue"
            android:layout_weight="1"
            android:text="@string/add" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Button_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <Button
            android:id="@+id/btn_modify_count"
            style="@style/Button_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modifycount" />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>
